--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -399,6 +399,10 @@
           "type": "string",
           "description": "next link"
         },
+        "tasks": {
+          "$ref": "#/definitions/Tasks",
+          "description": "Contains the state for the tasks that are being executed as part of the submitted job for analyzing a conversation."
+        },
         "statistics": {
           "$ref": "#/definitions/ConversationRequestStatistics",
           "description": "Contains the statistics for the submitted job."
@@ -408,12 +412,8 @@
         "createdDateTime",
         "jobId",
         "lastUpdateDateTime",
-        "status"
-      ],
-      "allOf": [
-        {
-          "$ref": "#/definitions/ConversationTasksState"
-        }
+        "status",
+        "tasks"
       ]
     },
     "AnalyzeConversationJobStatistics": {
@@ -442,7 +442,7 @@
           "type": "array",
           "description": "Set of tasks to execute on the input conversation.",
           "items": {
-            "$ref": "#/definitions/AnalyzeConversationLROTask"
+            "$ref": "#/definitions/AnalyzeConversationLroTask"
           },
           "x-ms-identifiers": []
         }
@@ -450,25 +450,6 @@
       "required": [
         "analysisInput",
         "tasks"
-      ]
-    },
-    "AnalyzeConversationLROTask": {
-      "type": "object",
-      "description": "Base class for a long-running conversation input task.",
-      "properties": {
-        "kind": {
-          "$ref": "#/definitions/AnalyzeConversationLROTaskKind",
-          "description": "Enumeration of supported analysis tasks on a collection of conversations."
-        }
-      },
-      "discriminator": "kind",
-      "required": [
-        "kind"
-      ],
-      "allOf": [
-        {
-          "$ref": "#/definitions/TaskIdentifier"
-        }
       ]
     },
     "AnalyzeConversationLROTaskKind": {
@@ -506,6 +487,25 @@
           }
         ]
       }
+    },
+    "AnalyzeConversationLroTask": {
+      "type": "object",
+      "description": "Base class for a long-running conversation input task.",
+      "properties": {
+        "kind": {
+          "$ref": "#/definitions/AnalyzeConversationLROTaskKind",
+          "description": "Enumeration of supported analysis tasks on a collection of conversations."
+        }
+      },
+      "discriminator": "kind",
+      "required": [
+        "kind"
+      ],
+      "allOf": [
+        {
+          "$ref": "#/definitions/TaskIdentifier"
+        }
+      ]
     },
     "AnalyzeConversationResult": {
       "type": "object",
@@ -614,7 +614,7 @@
       },
       "allOf": [
         {
-          "$ref": "#/definitions/AnalyzeConversationLROTask"
+          "$ref": "#/definitions/AnalyzeConversationLroTask"
         }
       ],
       "x-ms-discriminator-value": "ConversationalSummarizationTask"
@@ -680,7 +680,7 @@
       },
       "allOf": [
         {
-          "$ref": "#/definitions/AnalyzeConversationLROTask"
+          "$ref": "#/definitions/AnalyzeConversationLroTask"
         }
       ],
       "x-ms-discriminator-value": "ConversationalSentimentTask"
@@ -715,7 +715,7 @@
       },
       "allOf": [
         {
-          "$ref": "#/definitions/AnalyzeConversationLROTask"
+          "$ref": "#/definitions/AnalyzeConversationLroTask"
         }
       ],
       "x-ms-discriminator-value": "CustomConversationalSummarizationTask"
