--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -85,55 +85,10 @@
         }
       }
     },
-    "/language/analyze-conversations/jobs": {
-      "post": {
-        "operationId": "SubmitJob",
-        "description": "Analyzes the input conversation utterance.",
-        "parameters": [
-          {
-            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AnalyzeConversationJobsInput"
-            }
-          }
-        ],
-        "responses": {
-          "202": {
-            "description": "The request has been accepted for processing, but processing has not yet completed.",
-            "headers": {
-              "Operation-Location": {
-                "type": "string",
-                "format": "uri",
-                "description": "The location for monitoring the operation state."
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/Azure.Core.Foundations.ErrorResponse"
-            },
-            "headers": {
-              "x-ms-error-code": {
-                "type": "string",
-                "description": "String error code indicating what went wrong."
-              }
-            }
-          }
-        },
-        "x-ms-long-running-operation": true
-      }
-    },
     "/language/analyze-conversations/jobs/{jobId}": {
       "get": {
-        "operationId": "JobStatus",
-        "summary": "Get analysis status and results",
-        "description": "Get the status of an analysis job. A job can consist of one or more tasks. After all tasks succeed, the job transitions to the succeeded state and results are available for each task.",
+        "operationId": "GetJobStatus",
+        "description": "Returns the status of the images operation",
         "parameters": [
           {
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
@@ -141,16 +96,9 @@
           {
             "name": "jobId",
             "in": "path",
-            "description": "job ID",
+            "description": ".",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "showStats",
-            "in": "query",
-            "description": "(Optional) if set to true, response will contain request and document level statistics.",
-            "required": false,
-            "type": "boolean"
           }
         ],
         "responses": {
