sdk generation testing

--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -3205,7 +3205,7 @@
           "format": "int32",
           "description": "Total count of tasks submitted as part of the job."
         },
-        "result": {
+        "items": {
           "type": "array",
           "description": "List of results from tasks (if available).",
           "items": {
