--- a/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
@@ -2722,12 +2722,8 @@
           "description": "The ID of the widget's manufacturer."
         },
         "widgetParts": {
-          "type": "array",
-          "description": "Parts on Widget",
-          "items": {
-            "$ref": "#/definitions/WidgetPart"
-          },
-          "x-ms-identifiers": []
+          "$ref": "#/definitions/WidgetParts",
+          "description": "Parts on Widget"
         },
         "etag": {
           "$ref": "#/definitions/Azure.Core.eTag",
@@ -2798,12 +2794,8 @@
           "description": "The ID of the widget's manufacturer."
         },
         "widgetParts": {
-          "type": "array",
-          "description": "Parts on Widget",
-          "items": {
-            "$ref": "#/definitions/WidgetPart"
-          },
-          "x-ms-identifiers": []
+          "$ref": "#/definitions/WidgetPartsCreateOrUpdate",
+          "description": "Parts on Widget"
         }
       }
     },
@@ -2857,6 +2849,35 @@
         }
       ],
       "x-ms-discriminator-value": "ManufacturerB"
+    },
+    "WidgetParts": {
+      "type": "object",
+      "properties": {
+        "parts": {
+          "type": "array",
+          "description": "Parts on Widget",
+          "items": {
+            "$ref": "#/definitions/WidgetPart"
+          },
+          "x-ms-identifiers": []
+        }
+      },
+      "required": [
+        "parts"
+      ]
+    },
+    "WidgetPartsCreateOrUpdate": {
+      "type": "object",
+      "properties": {
+        "parts": {
+          "type": "array",
+          "description": "Parts on Widget",
+          "items": {
+            "$ref": "#/definitions/WidgetPart"
+          },
+          "x-ms-identifiers": []
+        }
+      }
     },
     "extraInformationKind": {
       "type": "string",
