--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -1678,30 +1678,20 @@
       "type": "object",
       "description": "The result from sentiment analysis operation for each conversation.",
       "properties": {
-        "id": {
-          "type": "string",
-          "description": "Unique, non-empty conversation identifier."
-        },
-        "warnings": {
+        "conversationItems": {
           "type": "array",
-          "description": "Warnings encountered in processing the document.",
+          "description": "Enumeration of Sentiment operation results for all the conversation items in a conversation.",
           "items": {
-            "$ref": "#/definitions/InputWarning"
-          },
-          "x-ms-identifiers": []
-        },
-        "statistics": {
-          "$ref": "#/definitions/ConversationStatistics",
-          "description": "If showStats=true was specified in the request this field will contain information about the conversation payload."
+            "$ref": "#/definitions/ConversationSentimentItemResult"
+          }
         }
       },
       "required": [
-        "id",
-        "warnings"
+        "conversationItems"
       ],
       "allOf": [
         {
-          "$ref": "#/definitions/ConversationSentimentResult"
+          "$ref": "#/definitions/ConversationResultBase"
         }
       ]
     },
